<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KalenderFragment">

<!-- test -->

        <Button
            android:id="@+id/button_startzeit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/Zeit_Anfang"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <TextView
            android:id="@+id/TextGanztaegig"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:text="@string/Ganztaegig"
            app:layout_constraintBottom_toTopOf="@+id/TextWoechentlich"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_startzeit" />

        <Button
            android:id="@+id/createNewEvent"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/terminErstellen"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

        <EditText
            android:id="@+id/textfeldTerminbeschreibung"
            android:layout_width="360dp"
            android:layout_height="37dp"
            android:layout_marginStart="27dp"

            android:layout_marginLeft="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/textfeldTerminbeschreibumg"
            app:layout_constraintBottom_toTopOf="@+id/textfeldTerminort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfeld_titel" />

        <EditText
            android:id="@+id/textfeldTerminort"
            android:layout_width="360dp"
            android:layout_height="37dp"
            android:layout_marginStart="27dp"

            android:layout_marginLeft="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/textfeldTerminort"
            app:layout_constraintBottom_toTopOf="@+id/calendarView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfeldTerminbeschreibung" />

        <TextView
            android:id="@+id/TextWoechentlich"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:text="@string/TextWoechentlich"
            app:layout_constraintBottom_toTopOf="@id/createNewEvent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextGanztaegig" />

        <EditText
            android:id="@+id/textfeld_titel"
            android:layout_width="360dp"
            android:layout_height="37dp"
            android:layout_marginStart="27dp"

            android:layout_marginLeft="27dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/textfeldTermintitel"
            app:layout_constraintBottom_toTopOf="@+id/textfeldTerminbeschreibung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/swt_daily"
            android:layout_width="71dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toTopOf="@+id/swt_weekly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_Zeit_Ende" />

        <Switch
            android:id="@+id/swt_weekly"
            android:layout_width="71dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toTopOf="@+id/createNewEvent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swt_daily" />

        <Button
            android:id="@+id/button_third_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous3"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/button_Zeit_Ende"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:text="@string/Zeit_Ende"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="360dp"
            android:layout_height="300dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfeldTerminort" />


</androidx.constraintlayout.widget.ConstraintLayout>